--- a/public/css/custom/style.css
+++ b/public/css/custom/style.css
@@ -84,34 +84,110 @@ label {
     margin-bottom: 3px;
 }
 
-.cities_n_areasbtns{
+.cities_n_areasbtns {
     margin: 0px 0px 10px 0px;
 }
 
-.cities_n_areasbtns:first-child{
+.cities_n_areasbtns:first-child {
     margin-right: 10px;
 }
 
-.cities_n_areasfoot{
+.cities_n_areasfoot {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     flex-wrap: wrap;
+    padding-bottom: 10px;
 }
 
-@media(max-width: 768px){
+.selectedFormsCont {
+    margin-top: 30px;
+    margin-bottom: 10px;
 }
 
-@media(max-width: 450px){
-    .cities_n_areasbtns{
+.selectedForms,
+.forms_of_product {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 13px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
+.removeItemAdded {
+    position: absolute;
+    top: -7px;
+    right: -9px;
+    color: #000;
+    background: #fff;
+    border: 1px solid #000;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.itemAdded,
+.formPills {
+    margin: 4px 7px;
+    background: var(--bs-primary);
+    height: 30px;
+    display: flex;
+    align-items: center;
+    min-width: fit-content;
+    flex-wrap: wrap;
+    color: #fff;
+    border-radius: 7px;
+    position: relative;
+    font-size: 12px;
+    padding: 0px 10px;
+}
+
+.selectedForms .itemAdded{
+    padding: 0px;
+}
+
+.formPills{
+    cursor: pointer;
+}
+
+.identifiers {
+    height: 100%;
+    display: inline-flex;
+    align-items: center;
+    padding: 0px 10px;
+    font-weight: bold;
+}
+
+.comp_name {
+    border-radius: 7px 0px 0px 6px;
+    background: gold;
+    color: #000;
+}
+
+.prod_name {
+    background: limegreen;
+}
+
+
+@media (max-width: 768px) {
+}
+
+@media (max-width: 450px) {
+    .cities_n_areasbtns {
         width: 100%;
     }
 
-    .cities_n_areasfoot{
+    .cities_n_areasfoot {
         justify-content: flex-start;
     }
 
-    .cities_n_areasbtns:first-child{
+    .cities_n_areasbtns:first-child {
         margin-right: 0px;
     }
 }
